pyinterp/pyinterp/pyinterp/tests/must_pass/math/errors/asin_domain2.py
print(math.asin(2.0))